# SampleCodeRevitBatchProcessor

./: .gitignore  BatchProcessorLogUtils.py  Common.py  Common_Post.py  FileList.py  MANIFEST.in  ModifyAddSharedParas.py  ModifyDeleteSheetsAndViews.py  ModifyExportNWC_IFC.py  ModifyLevelGridScopeboxWorsket.py  ModifyLevelGridScopeboxWorsket_executeThis.py  ModifyModelMilestone.py  ModifyModelReloadLinks.py  ModifyRenameLoaded.py  ModifyRevisionAndApplyToSheets.py  ModifyRevisionSimple.py  ModifyRevitFileSaveAs.py  ModifyRevitLinksWorksetByList.py  ModifyRevitLinksWorksetByList_executeThis.py  ModifyRevitLinksWorksetInstanceToType.py  ModifyRevitLinksWorksetInstanceToType_executeThis.py  ModifyRevitLinksWorksetTypeToInstance.py  ModifyRevitLinksWorksetTypeToInstance_executeThis.py  ModifyWorsketNameByList_executeThis.py  POST_AutoFiling.py  Post_ReportLinks.py  Pre_BuildFileList.py  README.md  ReportGridsLevels.py  ReportGridsLevels_executeThis.py  ReportGrids_executeThis.py  ReportLinks.py  ReportLinks_executeThis.py  ReportMatts.py  ReportMatts_executeThis.py  ReportSharedParameters.py  ReportSharedParameters_executeThis.py  ReportWallsDetails.py  ReportWallsDetails_executeThis.py  ReportWorksets.py  (+13 more)
duHast/: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
duHast/src/duHast/: __init__.py
duHast/src/duHast/APISamples/: BatchProcessorLogUtils.py  IFamilyData.py  IFamilyProcessor.py  RevitAnnotation.py  RevitBIM360.py  RevitBuildingPads.py  RevitCategories.py  RevitCategoryData.py  RevitCategoryDataProcessor.py  RevitCategoryDataPurgeUnused.py  RevitCeilings.py  RevitCommonAPI.py  RevitCurtainWallElements.py  RevitDesignSetOptions.py  RevitDetailItems.py  RevitElementParameterGetUtils.py  RevitElementParameterSetUtils.py  RevitExport.py  RevitExportIFCConfig.py  RevitExportIFCSettings.py  RevitFamilyBaseData.py  RevitFamilyBaseDataAnalysisCircularReferencing.py  RevitFamilyBaseDataAnalysisMissingFamilies.py  RevitFamilyBaseDataAnalysisReloadAdvanced.py  RevitFamilyBaseDataProcessor.py  RevitFamilyBaseDataUtils.py  RevitFamilyCategoryDataUtils.py  RevitFamilyDataCollector.py  RevitFamilyLoadOption.py  RevitFamilyParameterUtils.py  RevitFamilyReload.py  RevitFamilyReloadAdvancedUtils.py  RevitFamilyRenameFiles.py  RevitFamilyRenameFilesUtils.py  RevitFamilyRenameFindHostFamilies.py  RevitFamilyRenameLoadedFamilies.py  RevitFamilyReportUtils.py  RevitFamilyUtils.py  RevitFloors.py  RevitGenericAnnotation.py  (+48 more)
duHast/src/duHast/Data/: data_to_shapely.py  process_ceilings_to_rooms.py
duHast/src/duHast/DataSamples/: DataBase.py  DataCeiling.py  DataDesignSetOption.py  DataElementGeometryBase.py  DataExport.py  DataGeometry.py  DataGeometryBase.py  DataGeometryPolygon.py  DataGeometryTopoCell.py  DataInstanceProperties.py  DataLevel.py  DataPhasing.py  DataReadFromFile.py  DataRevitModel.py  DataRoom.py  DataShapely.py  DataToShapely.py  DataTypeProperties.py  ProcessCeilingsToRooms.py
duHast/src/duHast/Revit/: LICENSE
duHast/src/duHast/UI/: FileItem.py  FileList.py  FileSelectSettings.py  UIFileSelect.py  WorkloadBucket.py  Workloader.py  file_item.py  file_list.py  file_select_settings.py  script.py  ui_file_select.py  workload_bucket.py  workloader.py
duHast/src/duHast/Utilities/: Base.py  BatchProcessorLogUtils.py  Compare.py  ConsoleOut.py  DateStamps.py  DirectoryIO.py  FilesCSV.py  FilesCombine.py  FilesGet.py  FilesIO.py  FilesTab.py  Result.py  Utility.py  (+24 more)
duHast/src/du_hast/: __init__.py  testTwo.py
(+3929 files in other folders)
