[options]
packages = duHast

# ...
package_dir =
    duHast = duHast

[metadata]
name = DuHast
version = 1.1.2
author = Jan Christel
author_email = jan.r.christel@gmail.com
description = Revit API sample snippets and Revit Batch Processor flows.
keywords = "Revit", "API", "Batchprocessor", "sample"
license = BSD-3-Clause
icense_file = { file = "LICENSE" }
