[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DuHast"
version = "1.0.6"
description = "Revit API sample library"
readme = "README.md"
authors = [{ name = "Jan Christel", email = "jan.r.christel@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
]
keywords = ["Revit", "API", "Batchprocessor", "sample"]

dependencies = [
    "mypy[python2]"
]

[project.optional-dependencies]
dev = ["numpy", "shapely", "matplotlib"]

[project.urls]
Homepage = "https://github.com/jchristel/SampleCodeRevitBatchProcessor"