[build-system]
requires = ["setuptools==43.0.0", "wheel==0.33.6"]
build-backend = "setuptools.build_meta"

[project]
name = "DuHast"
version = "1.0.7"
description = "Revit API sample library"
readme = "README.md"
authors = [{ name = "Jan Christel", email = "jan.r.christel@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.4",
]
keywords = ["Revit", "API", "Batchprocessor", "sample"]

dependencies = [
    "mypy[python2]"
]

[project.optional-dependencies]
dev = ["numpy", "shapely", "matplotlib"]

[project.urls]
Homepage = "https://github.com/jchristel/SampleCodeRevitBatchProcessor"

[tool.bumpver]
current_version = "1.0.7"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"../docsource/source/conf.py" =['release = "{version}"']