[options]
packages =
    duHast
    duHast.APISamples
    duHast.DataSamples
    duHast.UI
    duHast.Utilities
# ...
package_dir =
    duHast = src/duHast

[metadata]
name = DuHast
version = 0.0.3
author = Jan Christel
author_email = jan.r.christel@gmial.com
description = Revit API sample snippets and Revit Batch Processor flows.
keywords = "Revit", "API", "Batchprocessor", "sample"
license = GPL3
icense_file = { file = "LICENSE" }